[gd_scene load_steps=11 format=3 uid="uid://byvjhchdstl4d"]

[ext_resource type="Script" path="res://Scripts/PlayerBody.gd" id="1_vbv0m"]
[ext_resource type="Script" path="res://Scripts/Leg.gd" id="2_ywggi"]
[ext_resource type="Texture2D" uid="uid://b4ur571w8sua4" path="res://Assets/leg.png" id="4_yohe8"]
[ext_resource type="Texture2D" uid="uid://c7pecgybybo60" path="res://Assets/hat.png" id="5_y1isy"]
[ext_resource type="Script" path="res://Scripts/ItemOnHold.gd" id="6_1nugy"]
[ext_resource type="Texture2D" uid="uid://dfyb2acr82osq" path="res://Assets/hand.png" id="6_4yqrv"]
[ext_resource type="Script" path="res://Scripts/PlayerInventory.gd" id="6_tyos2"]
[ext_resource type="Texture2D" uid="uid://cjpaiay1p0kwf" path="res://Assets/attackPath.png" id="7_cb21g"]
[ext_resource type="Script" path="res://Scripts/AttackPath.gd" id="7_ouisa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hngjb"]
radius = 135.556
height = 408.0

[node name="PlayerBody" type="Marker2D"]
script = ExtResource("1_vbv0m")

[node name="Hand1" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 65)
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_4yqrv")
offset = Vector2(0, 20)

[node name="Leg1" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(20, 15)
script = ExtResource("2_ywggi")

[node name="Knee" type="Marker2D" parent="Leg1"]
y_sort_enabled = true
position = Vector2(35, 0)

[node name="Foot" type="Marker2D" parent="Leg1/Knee"]
position = Vector2(35, 0)

[node name="Foot" type="Sprite2D" parent="Leg1/Knee/Foot"]
y_sort_enabled = true
position = Vector2(12, -0.68163)
rotation = 1.5708
scale = Vector2(0.0735497, 0.0975237)
texture = ExtResource("4_yohe8")

[node name="Leg2" type="Sprite2D" parent="Leg1/Knee"]
y_sort_enabled = true
position = Vector2(16.7466, -0.713926)
rotation = 1.5708
scale = Vector2(0.0757293, 0.117413)
texture = ExtResource("4_yohe8")

[node name="Leg" type="Sprite2D" parent="Leg1"]
y_sort_enabled = true
position = Vector2(18.5783, -0.999999)
rotation = 1.5708
scale = Vector2(0.0770794, 0.11797)
texture = ExtResource("4_yohe8")

[node name="Leg2" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(20, 15)
script = ExtResource("2_ywggi")

[node name="Knee" type="Marker2D" parent="Leg2"]
y_sort_enabled = true
position = Vector2(35, 0)

[node name="Foot" type="Marker2D" parent="Leg2/Knee"]
y_sort_enabled = true
position = Vector2(35, 0)

[node name="Foot" type="Sprite2D" parent="Leg2/Knee/Foot"]
y_sort_enabled = true
position = Vector2(12, -0.68163)
rotation = 1.5708
scale = Vector2(0.0735497, 0.0975237)
texture = ExtResource("4_yohe8")

[node name="Leg2" type="Sprite2D" parent="Leg2/Knee"]
y_sort_enabled = true
position = Vector2(16.7466, -0.713926)
rotation = 1.5708
scale = Vector2(0.0757293, 0.117413)
texture = ExtResource("4_yohe8")

[node name="Leg" type="Sprite2D" parent="Leg2"]
y_sort_enabled = true
position = Vector2(18.5783, -0.999999)
rotation = 1.5708
scale = Vector2(0.0770794, 0.11797)
texture = ExtResource("4_yohe8")

[node name="Hand2" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 65)
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_4yqrv")
offset = Vector2(0, 20)

[node name="PlayerInventory" type="Node2D" parent="."]
script = ExtResource("6_tyos2")

[node name="ItemOnHold" type="Node2D" parent="PlayerInventory"]
script = ExtResource("6_1nugy")

[node name="ItemSprite" type="Sprite2D" parent="PlayerInventory/ItemOnHold"]
rotation = -0.436332
scale = Vector2(0.3, 0.3)

[node name="HandOnHold1" type="Sprite2D" parent="PlayerInventory/ItemOnHold"]
visible = false
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_4yqrv")
offset = Vector2(0, 20)

[node name="HandOnHold2" type="Sprite2D" parent="PlayerInventory/ItemOnHold"]
visible = false
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_4yqrv")
offset = Vector2(0, 20)

[node name="AttackPath" type="Sprite2D" parent="PlayerInventory/ItemOnHold"]
modulate = Color(1, 1, 1, 0.219608)
scale = Vector2(0.5, 0.45)
texture = ExtResource("7_cb21g")

[node name="AttackPathHitbox" type="Area2D" parent="PlayerInventory/ItemOnHold/AttackPath"]
script = ExtResource("7_ouisa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInventory/ItemOnHold/AttackPath/AttackPathHitbox"]
position = Vector2(0, -197.778)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_hngjb")

[node name="Hat" type="Sprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(0.496, 0.496)
texture = ExtResource("5_y1isy")
offset = Vector2(-7, 0)
